added columns fixed header problems starter on a slideshow

--- a/index3.html
+++ b/index3.html
@@ -1,5 +1,5 @@
 
-<div class="slideshow-container">
+<!-- <div class="slideshow-container">
 
     <div class="mySlides fade">
     <div class="numbertext">1 / 4</div>
@@ -37,4 +37,4 @@
 
     </div>
 
-    
+     -->
